--- a/.github/workflows/quality-code-check.yaml
+++ b/.github/workflows/quality-code-check.yaml
@@ -2,6 +2,9 @@ name: Quality Code Check
 
 on: [workflow_dispatch,pull_request]
 
+permissions:
+  checks: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
